# lab_05.5

./: CMakeLists.txt  main.cpp
include/: main.h
src/: h.cpp  main.cpp
tests/: test_h.cpp
